A LOT OF CHANGES

--- a/View/AddNewDepartmentWindow.xaml
+++ b/View/AddNewDepartmentWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ManageStaffDBApp.View"
         mc:Ignorable="d"
-        Title="AddNewDepartmentWindow" Height="300" Width="300">
+        Title="AddNewDepartmentWindow" Height="300" Width="300"
+        Name="AddNewDepartmentWnd">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -16,12 +17,16 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Width="200">
-            <TextBlock Text="Name"/>
-            <TextBox Text=""/>
+            <TextBlock Text="Name" />
+            <TextBox Text="{Binding DepartmentName}"
+                     Name="NameBlock"/>
         </StackPanel>
         <Button Grid.Row="1"
                 Content="Add department"
                 Height="50"
-                Width="150"/>
+                Width="150"
+                Click="Button_Click"
+                Command="{Binding AddNewDepartment}"
+                CommandParameter="{Binding ElementName=AddNewDepartmentWnd}"/>
     </Grid>
 </Window>
