--- a/View/AddNewEmployeeWindow.xaml
+++ b/View/AddNewEmployeeWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ManageStaffDBApp.View"
         mc:Ignorable="d"
-        Title="AddNewEmployeeWindow" Height="300" Width="300">
+        Title="AddNewEmployeeWindow" Height="300" Width="300"
+        Name="AddNewEmployeeWnd">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -17,17 +18,21 @@
                     VerticalAlignment="Center"
                     Width="200">
             <TextBlock Text="Name"/>
-            <TextBox Text=""/>
+            <TextBox Name="NameBlock" Text="{Binding EmployeeName}"/>
             <TextBlock Text="Surname"/>
-            <TextBox Text=""/>
+            <TextBox Name="SurnameBlock" Text="{Binding EmployeeSurName}"/>
             <TextBlock Text="Phone"/>
-            <TextBox Text=""/>
+            <TextBox Name="PhoneBlock" Text="{Binding EmployeePhone}"/>
             <TextBlock Text="Position"/>
-            <ComboBox />
+            <ComboBox ItemsSource="{Binding AllPositions}"
+                      DisplayMemberPath="Name"
+                      SelectedItem="{Binding EmployeePosition}"/>
         </StackPanel>
         <Button Grid.Row="1"
                 Content="Add employee"
                 Height="50"
-                Width="150"/>
+                Width="150"
+                Command="{Binding AddNewEmployee}"
+                CommandParameter="{Binding ElementName=AddNewEmployeeWnd}"/>
     </Grid>
 </Window>
