--- a/View/AddNewPositionWindow.xaml
+++ b/View/AddNewPositionWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ManageStaffDBApp.View"
         mc:Ignorable="d"
-        Title="AddNewPositionWindow" Height="450" Width="450">
+        Title="AddNewPositionWindow" Height="450" Width="450"
+        Name="AddNewPositionWnd">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -17,17 +18,21 @@
                     VerticalAlignment="Center"
                     Width="200">
             <TextBlock Text="Name"/>
-            <TextBox Text=""/>
+            <TextBox Name="NameBlock" Text="{Binding PositionName}"/>
             <TextBlock Text="Salary"/>
-            <TextBox Text=""/>
+            <TextBox Name="SalaryBlock" Text="{Binding PositionSalary}"/>
             <TextBlock Text="Max of vacancies"/>
-            <TextBox Text=""/>
+            <TextBox Name="MaxNumberBlock" Text="{Binding PositionMaxNumber}"/>
             <TextBlock Text="Department"/>
-            <ComboBox />
+            <ComboBox ItemsSource="{Binding AllDepartments}"
+                      DisplayMemberPath="Name"
+                      SelectedItem="{Binding PositionDepartment}"/>
         </StackPanel>
         <Button Grid.Row="1"
                 Content="Add position"
                 Height="50"
-                Width="150"/>
+                Width="150"
+                Command="{Binding AddNewPosition}"
+                CommandParameter="{Binding ElementName=AddNewPositionWnd}"/>
     </Grid>
 </Window>
