зроблено але не ідеально

--- a/View/EditDepartmentWindow.xaml
+++ b/View/EditDepartmentWindow.xaml
@@ -5,8 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ManageStaffDBApp.View"
         mc:Ignorable="d"
-        Title="EditDepartmentWindow" Height="450" Width="800">
+         Title="EditDepartmentWindow" Height="300" Width="300"
+        Name="EditDepartmentWnd">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Vertical"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Width="200">
+            <TextBlock Text="New name of department"/>
+            <TextBox Text="{Binding DepartmentName}"/>
+        </StackPanel>
+        <Button Grid.Row="1" Content="Edit department"
+                Command="{Binding EditDepartment}"
+                CommandParameter="{Binding ElementName=EditDepartmentWnd}"/>
     </Grid>
 </Window>
