--- a/View/EditEmployeeWindow.xaml
+++ b/View/EditEmployeeWindow.xaml
@@ -5,8 +5,38 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ManageStaffDBApp.View"
         mc:Ignorable="d"
-        Title="EditEmployeeWindow" Height="450" Width="800">
+        Title="EditEmployeeWindow" Height="300" Width="300"
+        Name="EditEmployeeWnd">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Vertical"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Width="200">
+            <TextBlock Text="New name"/>
+            <TextBox Text="{Binding EmployeeName}"/>
+            <TextBlock Text="New surname"/>
+            <TextBox Text="{Binding EmployeeSurName}"/>
+            <TextBlock Text="New phone"/>
+            <TextBox>
+                <TextBox.Text>
+                    <Binding Path="UserPhone">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+            <TextBlock Text="New position"/>
+            <ComboBox ItemsSource="{Binding AllPositions}"
+                      DisplayMemberPath="Name"
+                      SelectedItem="{Binding EmployeePosition}"/>
+        </StackPanel>
+        <Button Grid.Row="1" Content="Edit staff"
+                Command="{Binding EditEmployee}"
+                CommandParameter="{Binding ElementName=EditEmployeeWnd}"/>
     </Grid>
 </Window>
