--- a/View/EditPositionWindow.xaml
+++ b/View/EditPositionWindow.xaml
@@ -5,8 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ManageStaffDBApp.View"
         mc:Ignorable="d"
-        Title="EditPositionWindow" Height="450" Width="800">
+        Title="EditPositionWindow" Height="300" Width="300"
+        Name="EditPositionWnd">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Vertical"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Width="200">
+            <TextBlock Text="New name of position"/>
+            <TextBox Text="{Binding PositionName}"/>
+            <TextBlock Text="New salary"/>
+            <TextBox Text="{Binding PositionSalary}" />
+            <TextBlock Text="New max of vacancies"/>
+            <TextBox Text="{Binding PositionMaxNumber}"/>
+            <TextBlock Text="New department"/>
+            <ComboBox ItemsSource="{Binding AllDepartments}"
+                      DisplayMemberPath="Name"
+                      SelectedItem="{Binding PositionDepartment}"/>
+        </StackPanel>
+        <Button Grid.Row="1" Content="Edit position"
+                Command="{Binding EditPosition}"
+                CommandParameter="{Binding ElementName=EditPositionWnd}"/>
     </Grid>
 </Window>
