--- a/View/AddNewDepartmentWindow.xaml
+++ b/View/AddNewDepartmentWindow.xaml
@@ -17,7 +17,7 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Width="200">
-            <TextBlock Text="Name" />
+            <TextBlock Text="Name of department" />
             <TextBox Text="{Binding DepartmentName}"
                      Name="NameBlock"/>
         </StackPanel>
