--- a/View/AddNewPositionWindow.xaml
+++ b/View/AddNewPositionWindow.xaml
@@ -17,7 +17,7 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Width="200">
-            <TextBlock Text="Name"/>
+            <TextBlock Text="Name of position"/>
             <TextBox Name="NameBlock" Text="{Binding PositionName}"/>
             <TextBlock Text="Salary"/>
             <TextBox Name="SalaryBlock" Text="{Binding PositionSalary}"/>
